updated long-form bio on about page

--- a/styles.scss
+++ b/styles.scss
@@ -35,11 +35,11 @@ $terracotta-dark: #a2604a;
 // Base document colors
 $navbar-bg: $cream;
 $navbar-fg: $medium-green; 
-$navbar-hl: $terracotta;//$orange;//$purple; 
+$navbar-hl: $terracotta;
 $body-bg: $light-green;
 $body-color: $medium-gray;
-$footer-bg: $light-green; //$cream; 
-$link-color: $terracotta;// $orange;//$purple;
+$footer-bg: $light-green;
+$link-color: $terracotta;
 
 // Inline code
 $code-bg: $cream;
